# GraphWeaver

./: .gitignore  CMakeLists.txt  README.md  config.yaml
docs/: assumptions.md  example_run.md  prompts.md
include/crawler/: config.hpp  crawler.hpp
include/detect/: detector.hpp  frameworks.hpp  readability.hpp
include/fetch/: fetcher.hpp  rate_limiter.hpp  robots.hpp
include/models/: models.hpp
include/orchestrate/: orchestrator.hpp
include/parse/: html_parser.hpp  normalizer.hpp  sitemap_parser.hpp
include/process/: chunker.hpp  content_processor.hpp  image_processor.hpp  link_processor.hpp  markdown_converter.hpp  tokenizer.hpp
include/queue/: priority_queue.hpp
include/scrape_llm/: cli_config.hpp  content_extractor.hpp  crawl_fetcher.hpp  llm_client.hpp  output_writers.hpp  pipeline.hpp  record_parser.hpp  relevance_router.hpp  report_generator.hpp  schema_infer.hpp  ssrf_guard.hpp  types.hpp  validator.hpp
include/storage/: rocksdb_store.hpp  store_interface.hpp
include/utils/: errors.hpp  hash.hpp  sanitize.hpp
scripts/: build.sh  test.sh
src/: main.cpp
src/crawler/: config.cpp  crawler.cpp
src/detect/: detector.cpp  frameworks.cpp  readability.cpp
src/fetch/: fetcher.cpp  rate_limiter.cpp  robots.cpp
src/models/: models.cpp
src/orchestrate/: orchestrator.cpp
src/parse/: html_parser.cpp  normalizer.cpp  sitemap_parser.cpp
src/process/: chunker.cpp  content_processor.cpp  image_processor.cpp  link_processor.cpp  markdown_converter.cpp  tokenizer.cpp
src/queue/: priority_queue.cpp
src/scrape_llm/: cli_config.cpp  content_extractor.cpp  crawl_fetcher.cpp  llm_client.cpp  main_scrape_llm.cpp  output_writers.cpp  pipeline.cpp  record_parser.cpp  relevance_router.cpp  report_generator.cpp  schema_infer.cpp  ssrf_guard.cpp  validator.cpp
src/storage/: rocksdb_store.cpp
src/utils/: errors.cpp  hash.cpp  sanitize.cpp
tests/: CMakeLists.txt  test_chunker.cpp  test_config.cpp  test_content_processor.cpp  test_crawler_integration.cpp  test_detector.cpp  test_fetcher.cpp  test_html_parser.cpp  test_main_text.cpp  test_markdown_converter.cpp  test_models.cpp  test_normalizer.cpp  test_placeholder.cpp  test_priority_queue.cpp  test_rate_limiter.cpp  test_readability.cpp  test_robots.cpp  test_rocksdb_store.cpp  test_schema_infer.cpp  test_sitemap_parser.cpp  test_tokenizer.cpp  test_utils.cpp  test_validator_repair.cpp
